Add metadata to allow a statements within a schema to adress public data